<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.LoginActivity">

    <TextView
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:background="@color/yellow"
        android:fontFamily="@font/scpregular"
        android:gravity="center"
        android:text="@string/registration"
        android:textSize="20sp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topPanel"
        android:layout_centerInParent="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">


                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/roundedbutton"
                    android:fontFamily="@font/scpregular"
                    android:hint="@string/username"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etUsername"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/roundedbutton"
                    android:fontFamily="@font/scpregular"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp" />

                <EditText
                    android:id="@+id/etPasswordAgain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etPassword"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/roundedbutton"
                    android:fontFamily="@font/scpregular"
                    android:inputType="textPassword"
                    android:hint="@string/password_again"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etPasswordAgain"
                    android:layout_marginBottom="80dp"
                    android:background="@drawable/roundedbutton"
                    android:fontFamily="@font/scpregular"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp"
                    />

                <Button
                    android:id="@+id/bRegistration"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etEmail"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/blackbutton_bottom"
                    android:textSize="16sp"
                    android:fontFamily="@font/scpregular"
                    android:text="@string/registration"
                    android:textColor="@color/white" />

            </RelativeLayout>


        </RelativeLayout>


    </ScrollView>


</RelativeLayout>