<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topPanel"
        android:layout_centerInParent="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">


                <Spinner
                    android:id="@+id/sMain_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/roundedbutton"
                    android:fontFamily="@font/scpregular"
                    android:hint="@string/main_category"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp" />

                <Spinner
                    android:id="@+id/sSide_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sMain_category"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/roundedbutton"
                    android:fontFamily="@font/scpregular"
                    android:hint="@string/side_category"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp" />

                <EditText
                    android:id="@+id/etEventname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sSide_category"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/roundedbutton"
                    android:fontFamily="@font/scpregular"
                    android:hint="@string/eventname"
                    android:paddingLeft="25dp"
                    android:paddingTop="10dp"
                    android:paddingRight="25dp"
                    android:paddingBottom="10dp" />


                <LinearLayout
                    android:id="@+id/dateLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etEventname"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/bDate"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/blackbutton_bottom"
                        android:text="@string/date"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/roundedbutton"
                        android:fontFamily="@font/scpregular"
                        android:gravity="center"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/timeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/dateLayout"
                    android:layout_marginBottom="20dp"
                    android:elevation="4dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/bTime"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/blackbutton_bottom"
                        android:text="@string/time"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tvTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/roundedbutton"
                        android:fontFamily="@font/scpregular"
                        android:gravity="center"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="10dp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/pictureUploadLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/timeLayout"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/bPicture"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/blackbutton_bottom"
                        android:text="@string/picture"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tvPicture"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/roundedbutton"
                        android:fontFamily="@font/scpregular"
                        android:gravity="center"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="10dp" />


                </LinearLayout>

                <EditText
                    android:id="@+id/etLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pictureUploadLayout"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/roundedbutton"
                    android:fontFamily="@font/scpregular"
                    android:hint="@string/location"
                    android:paddingLeft="25dp"
                    android:paddingTop="10dp"
                    android:paddingRight="25dp"
                    android:paddingBottom="10dp" />

                <EditText
                    android:id="@+id/etOrganiser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etLocation"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/roundedbutton"
                    android:fontFamily="@font/scpregular"
                    android:hint="@string/organiser"
                    android:paddingLeft="25dp"
                    android:paddingTop="10dp"
                    android:paddingRight="25dp"
                    android:paddingBottom="10dp" />


                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="460dp"
                    android:layout_below="@id/etOrganiser"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/roundedbutton"
                    android:fontFamily="@font/scpregular"
                    android:gravity="top"
                    android:hint="@string/description"
                    android:imeOptions="actionSend"
                    android:inputType="textMultiLine"
                    android:maxLength="500"
                    android:paddingLeft="25dp"
                    android:paddingTop="10dp"
                    android:paddingRight="25dp"
                    android:paddingBottom="10dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvCharCount"
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:layout_below="@id/etDescription"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/roundedbutton"
                    android:backgroundTint="@color/black"
                    android:gravity="center"
                    android:text="500/500 karakter"
                    android:textColor="@color/yellow"
                    android:textSize="14sp" />


                <Button
                    android:id="@+id/bMake"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvCharCount"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/blackbutton_bottom"
                    android:fontFamily="@font/scpregular"
                    android:text="@string/makebutton"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </RelativeLayout>


        </RelativeLayout>


    </ScrollView>


</RelativeLayout>