<?xml version="1.0" encoding="utf-8"?>


<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:fitsSystemWindows="true"
    tools:context=".View.MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/yellow"
            android:elevation="4dp">

            <LinearLayout
                android:id="@+id/toolbar_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/bFun"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/yellow"
                    android:fontFamily="@font/scpbold"
                    android:text="@string/fun"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/bKapcsolodj_ki"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/yellow"
                    android:fontFamily="@font/scpbold"
                    android:text="@string/kapcsolodj_ki"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/bJelentkezz"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/yellow"
                    android:fontFamily="@font/scpbold"
                    android:paddingLeft="10dp"
                    android:text="@string/jelentkezz"
                    android:textSize="18sp"
                    android:visibility="gone" />

            </LinearLayout>

        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.Toolbar
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_below="@id/toolbar"
            android:background="@color/blue"
            android:elevation="4dp"
            android:paddingEnd="18dp"
            android:paddingRight="18dp">
        </android.support.v7.widget.Toolbar>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/searchBar"
            android:layout_marginBottom="20dp"
            android:padding="4dp"
            android:scrollbars="vertical"
            tools:listitem="@layout/card_pinned_home_list_event">
        </android.support.v7.widget.RecyclerView>

    </RelativeLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header" />

</android.support.v4.widget.DrawerLayout>